# energy-trading-ai

./: .env.example  .gitignore  README.md  backtest_new.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: dashboard.py
config/: settings.yaml
docker/: Dockerfile  docker-compose.yml
notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_sentiment_analysis.ipynb  04_rag_pipeline.ipynb  05_model_training.ipynb  06_backtesting.ipynb
scripts/: analyse_edge_periods.py  build_features.py  build_vector_store.py  check_ng_predictability.py  compare_instruments.py  generate_morning_briefing.py  generate_report.py  ingest_data.py  ingest_demand_data.py  ingest_generation_data.py  run_backtest.py  run_composite_signal.py  run_experiments.py  run_spark_spread.py  run_storage_valuation.py  run_var_model.py  test_production_vs_price.py  test_rag_pipeline.py  train_load_model.py  train_models.py  train_ng_production_model.py  train_price_model.py  train_wind_model.py  validate_edge.py
src/: __init__.py
src/agents/: __init__.py  morning_briefing.py
src/backtesting/: __init__.py  analysis.py  engine.py  metrics.py
src/data/: __init__.py  eia_client.py  eia_demand_client.py  eia_generation_client.py  eia_lmp_client.py  fred_client.py  gdelt_sentiment.py  gpr_fetcher.py  news_fetcher.py  ng_production_client.py  openmeteo_client.py  price_fetcher.py  weather_client.py
src/features/: __init__.py  fundamental.py  load_features.py  macro.py  ng_production_features.py  pipeline.py  price_features.py  seasonal.py  technical.py  wind_gen_features.py
src/nlp/: __init__.py  news_processor.py  sentiment.py  sentiment_index.py
src/rag/: __init__.py  chunker.py  document_loader.py  embeddings.py  llm_client.py  qa_chain.py  retriever.py  signal_generator.py  vector_store.py
src/reporting/: __init__.py  morning_note.py  visualizations.py
src/strategy/: __init__.py  composite_signal.py  portfolio.py  position_sizing.py  risk_manager.py  signals.py  spark_spread.py  storage_valuation.py  var_model.py
tests/: __init__.py
tests/test_data/: __init__.py  test_price_fetcher.py
tests/test_features/: test_technical.py
tests/test_models/: __init__.py  test_base.py
tests/test_strategy/: __init__.py  test_risk_manager.py
